--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <link rel="shortcut icon" href="#">
   <link rel="preload" href="./fonts/Roboto-Bold.woff" as="font">
   <link rel="preload" href="./fonts/Roboto-Bold.woff2" as="font">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/main-min.css">
   <title>Название сайта</title>
 </head>
 <body>
