--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="#">
-  <link rel="preload" href="./fonts/Roboto-Bold.woff" as="font">
-  <link rel="preload" href="./fonts/Roboto-Bold.woff2" as="font">
+  <link rel="shortcut icon" href="./img/favicon.png">
+  <link rel="preload" href="./fonts/.woff" as="font">
+  <link rel="preload" href="./fonts/.woff2" as="font">
   <link rel="stylesheet" href="./css/main-min.css">
   <title>Название сайта</title>
 </head>
