уюрал автоматизацию webp

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,23 @@
   <title>Название сайта</title>
 </head>
 <body>
+  <header class="header">
+    <div class="header__container container">
+      <div class="header__menu">
+        <button class="header__exit-menu"></button>
+      </div>
+    </div>
+  </header>
+  <main>
+    <section class="">
+
+    </section>
+  </main>
+  <footer class="footer">
+    <div class="footer__container container">
+
+    </div>
+  </footer>
   <!-- Пример работы галереи fslightbox <a data-fslightbox="gallery" class="furniture-row__item" href="./img/furniture-8.jpg"><img src="./img/furniture-8.jpg" alt="Картинка"></a> -->
   <script src="./resources/fslightbox.js"></script>
   <script src="./js/main.min.js"></script>
