--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
     </div>
   </footer>
   <!-- Пример работы галереи fslightbox <a data-fslightbox="gallery" class="furniture-row__item" href="./img/furniture-8.jpg"><img src="./img/furniture-8.jpg" alt="Картинка"></a> -->
-  <script src="./resources/fslightbox.js"></script>
+  <script src="./resources/gallery-fslightbox/fslightbox.js"></script>
   <script src="./js/main.min.js"></script>
 </body>
 </html>
