Замена вебпака на инклюдефайл

--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,6 @@
   </div>
   <!-- Пример работы галереи fslightbox <a data-fslightbox="gallery" class="furniture-row__item" href="./img/furniture-8.jpg"><img src="./img/furniture-8.jpg" alt="Картинка"></a> -->
   <script src="./resources/gallery-fslightbox/fslightbox.js"></script>
-  <script src="./js/main.min.js"></script>
+  <script src="./js/main.js"></script>
 </body>
 </html>
