Добавление шаблона для письма и переработка бургера

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,30 +9,38 @@
   <link rel="preload" href="./fonts/.woff" as="font">
   <link rel="preload" href="./fonts/.woff2" as="font">
   <link rel="stylesheet" href="./css/main-min.css">
+  <!-- Пример работы галереи fslightbox <a data-fslightbox="gallery" class="furniture-row__item" href="./img/furniture-8.jpg"><img src="./img/furniture-8.jpg" alt="Картинка"></a> -->
+  <script defer src="./resources/gallery-fslightbox/fslightbox.js"></script>
+  <script defer src="./js/main.js"></script>
   <title>Название сайта</title>
 </head>
+
 <body>
   <div class="page">
     <header class="header">
       <div class="header__container container">
         <div class="header__menu">
+          <button class="burger">
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
+
           <button class="header__exit-menu"></button>
         </div>
       </div>
     </header>
     <main>
       <section class="">
-  
+
       </section>
     </main>
     <footer class="footer">
       <div class="footer__container container">
-  
+
       </div>
     </footer>
   </div>
-  <!-- Пример работы галереи fslightbox <a data-fslightbox="gallery" class="furniture-row__item" href="./img/furniture-8.jpg"><img src="./img/furniture-8.jpg" alt="Картинка"></a> -->
-  <script src="./resources/gallery-fslightbox/fslightbox.js"></script>
-  <script src="./js/main.js"></script>
 </body>
+
 </html>
