Добавление сео тегов

--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Описание сайта">
+  <meta name="keywords" content="Продажа техники, разработка сайтов">
+  <meta name="author" content="Roman Dodenko">
   <link rel="shortcut icon" href="./img/favicon.png">
   <link rel="preload" href="./fonts/.woff" as="font">
   <link rel="preload" href="./fonts/.woff2" as="font">
   <link rel="stylesheet" href="./css/main-min.css">
-  <!-- Пример работы галереи fslightbox <a data-fslightbox="gallery" class="furniture-row__item" href="./img/furniture-8.jpg"><img src="./img/furniture-8.jpg" alt="Картинка"></a> -->
-  <script defer src="./resources/gallery-fslightbox/fslightbox.js"></script>
   <script defer src="./js/main.js"></script>
   <title>Название сайта</title>
 </head>
