--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,22 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Название сайта">
+  <meta property="og:site_name" content="Описание сайта">
+  <meta property="og:url" content="Ссылка на сайт">
+  <meta property="og:image" content="Ссылка на сайт/картинка">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Название сайта">
+  <meta name="twitter:description" content="Описание сайта">
+  <meta name="twitter:site" content="Ссылка на сайт">
+  <meta name="twitter:image" content="Ссылка на сайт/картинка">
   <meta name="description" content="Описание сайта">
-  <meta name="keywords" content="Продажа техники, разработка сайтов">
-  <meta name="author" content="Roman Dodenko">
+  <title>Название сайта</title>
   <link rel="shortcut icon" href="./img/favicon.png">
   <link rel="preload" href="./fonts/.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="stylesheet" href="./css/main-min.css">
   <script defer src="./js/main.js"></script>
-  <title>Название сайта</title>
 </head>
 
 <body>
