Добавление новых файлов и решений

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
 
 <body>
   <div class="page">
+    <!-- start header -->
     <header class="header">
       <div class="header__container container">
         <div class="header__menu">
@@ -32,16 +33,23 @@
         </div>
       </div>
     </header>
+    <!-- end header -->
     <main>
+      <!-- start hero -->
       <section class="">
+        <div class="container">
 
+        </div>
       </section>
+      <!-- end hero -->
     </main>
+    <!-- start footer -->
     <footer class="footer">
       <div class="footer__container container">
 
       </div>
     </footer>
+    <!-- end footer -->
   </div>
 </body>
 
