--- a/Module gulp 2023 , includefile/src/index.html
+++ b/Module gulp 2023 , includefile/src/index.html
@@ -17,7 +17,7 @@
   <meta name="twitter:image" content="Ссылка на сайт/картинка">
   <meta name="description" content="Описание сайта">
   <title>Название сайта</title>
-  <link rel="shortcut icon" href="./img/favicon.png">
+  <link rel="icon" href="./img/favicon.png" type="image/x-icon"> 
   <link rel="preload" href="./fonts/.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="stylesheet" href="./css/main-min.css">
   <script defer src="./js/main.js"></script>
@@ -29,24 +29,32 @@
     <header class="header">
       <div class="header__container container">
         <div class="header__menu">
-          <button class="header__exit-menu"></button>
+          <button class="header__exit-menu" aria-label="Закрыть скрытое меню"></button>
         </div>
       </div>
     </header>
     <!-- Конец header -->
     <main>
       <!-- Начало hero -->
-      <section class="">
+      <section class="hero rd-upload">
         <div class="container">
-
+        
         </div>
       </section>
       <!-- Конец hero -->
     </main>
     <!-- Начало footer -->
     <footer class="footer">
-      <div class="footer__container container">
+      <div class="container">
+        <nav class="nav" aria-label="Навигация сайта">
+          <ul class="nav__list nav__list_footer" aria-label="Список навигации сайта">
+            <li class="nav__item">
+              <a class="nav__link" href="#!" aria-label="">
 
+              </a>
+            </li>
+          </ul>
+        </nav>
       </div>
     </footer>
     <!-- Конец footer -->
