--- a/Module gulp 2024 , includefile/src/index.html
+++ b/Module gulp 2024 , includefile/src/index.html
@@ -6,18 +6,27 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Название сайта">
-  <meta property="og:site_name" content="Описание сайта">
-  <meta property="og:url" content="Ссылка на сайт">
-  <meta property="og:image" content="Ссылка на сайт/картинка">
+  <meta name="language" content="Russian">
+  <meta name="robots" content="index, follow">
+  <meta name="keywords" content="ключ">
+  <meta property="og:locale" content="ru_RU">
+  <meta property="og:title" content="Заголовок страницы">
+  <meta property="og:site_name" content="Описание страницы">
+  <meta property="og:url" content="https://site.ru/">
+  <meta property="og:image" content="https://site.ru/main.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:image:alt" content="Главная">
+  <meta property="og:image:type" content="image/png">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Название сайта">
-  <meta name="twitter:description" content="Описание сайта">
-  <meta name="twitter:site" content="Ссылка на сайт">
-  <meta name="twitter:image" content="Ссылка на сайт/картинка">
-  <meta name="description" content="Описание сайта">
-  <title>Название сайта</title>
-  <link rel="icon" href="./img/favicon.png" type="image/x-icon"> 
+  <meta name="twitter:title" content="Заголовок страницы">
+  <meta name="twitter:description" content="Описание страницы">
+  <meta name="twitter:site" content="https://site.ru/">
+  <meta name="twitter:image" content="https://site.ru/main.png">
+  <meta name="description" content="Описание страницы">
+  <title>Заголовок страницы</title>
+  <link rel="canonical" href="https://site.ru/">
+  <link rel="icon" href="favicon.png" type="image/png">
   <link rel="preload" href="./fonts/.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="stylesheet" href="./css/main-min.css">
   <script defer src="./js/main.js"></script>
@@ -38,7 +47,7 @@
       <!-- Начало hero -->
       <section class="hero rd-upload">
         <div class="container">
-        
+
         </div>
       </section>
       <!-- Конец hero -->
