--- a/Module gulp 2024 , includefile/src/index.html
+++ b/Module gulp 2024 , includefile/src/index.html
@@ -27,11 +27,11 @@
   <title>Заголовок страницы</title>
   <link rel="canonical" href="https://site.ru/">
   <link rel="icon" href="favicon.png" type="image/png">
-  <link rel="preload" href="./fonts/.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="stylesheet" href="./css/main-min.css">
-  <script defer src="./js/main.js"></script>
+  <link rel="preload" href="fonts/.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="stylesheet" href="css/main-min.css">
+  <script defer src="js/main.js"></script>
 </head>
-
+ 
 <body>
   <div class="page">
     <!-- Начало header -->
@@ -43,7 +43,7 @@
       </div>
     </header>
     <!-- Конец header -->
-    <main>
+    <main class="main">
       <!-- Начало hero -->
       <section class="hero rd-upload">
         <div class="container">
