--- a/Module gulp 2024 , includefile/src/index.html
+++ b/Module gulp 2024 , includefile/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">  -->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,8 +11,6 @@
   <meta name="robots" content="index, follow">
   <meta name="keywords" content="ключ">
   <meta property="og:locale" content="ru_RU">
-  <meta property="og:title" content="Заголовок страницы">
-  <meta property="og:site_name" content="Описание страницы">
   <meta property="og:url" content="https://site.ru/">
   <meta property="og:image" content="https://site.ru/main.png">
   <meta property="og:image:width" content="1200">
@@ -19,12 +18,18 @@
   <meta property="og:image:alt" content="Главная">
   <meta property="og:image:type" content="image/png">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Заголовок страницы">
-  <meta name="twitter:description" content="Описание страницы">
   <meta name="twitter:site" content="https://site.ru/">
   <meta name="twitter:image" content="https://site.ru/main.png">
+  <link rel="alternate" href="https://site.com" hreflang="hu-HU">
+  <link rel="alternate" href="https://site.com/en" hreflang="en-EN">
+
+  <meta name="twitter:title" content="Заголовок страницы">
+  <meta property="og:title" content="Заголовок страницы">
+  <meta property="og:site_name" content="Описание страницы">
+  <meta name="twitter:description" content="Описание страницы">
   <meta name="description" content="Описание страницы">
   <title>Заголовок страницы</title>
+
   <link rel="canonical" href="https://site.ru/">
   <link rel="icon" href="favicon.png" type="image/png">
   <link rel="preload" href="fonts/.woff2" as="font" type="font/woff2" crossorigin>
